metadata/unpackaged/objects/I_O_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>I_O_Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>I/O Entities</relationshipLabel>
        <relationshipName>I_O_Entity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>CSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LISD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>I/O Entity</label>
    <nameField>
        <label>I/O Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>I/O Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>